--- a/public/views/messages_verify.html
+++ b/public/views/messages_verify.html
@@ -70,7 +70,7 @@
     </div>
     <div class="col-xs-12 col-md-4 col-gray">
       <p translate>
-        Komodo comes with a way of signing arbitrary messages.
+        Ciphscoin comes with a way of signing arbitrary messages.
       </p>
       <p translate>
         This form can be used to verify that a message comes from
