--- a/public/views/index.html
+++ b/public/views/index.html
@@ -61,20 +61,18 @@
 
       <div class="col-xs-12 col-md-4 col-gray">
         <h2 translate>What is Ciphscoin?</h2>
-	<!--
-        <p id="intro" translate><strong>Komodo</strong> aims at being the new standard for cryptocurrency security and anonymity.</p>
-        <p class="subIntro" translate>Protected by ZCASH zero-knowledge proofs, users can make 100% untraceable transactions - secured by Bitcoin‘s petahash Proof of Work - due to Komodo’s new delayed Proof of Work (dPoW) consensus mechanism.</p>
-        <p class="subIntro">Learn more on <a href="https://komodoplatform.com" target="_blank" title="Komodo Platform">KomodoPlatform.com</a></p>
-        -->
-        <p id="intro" translate>End-to-end Blockchain Solutions Provider empowering developers to build freely
-and participate in creating the largest open blockchain network.</p>
-        <p class="subIntro" translate><a href="https://ciphs.coin" target="_blank" title="CIPHS">Ciphscoin Protocol Network</a> strives to accelerate the adoption of blockchain technologies around the globe and to lead the world in blockchain integration. All of the Ciphscoin’s unique and cutting-edge technologies are open-source and available to everyone.</p>
-        <p class="subIntro">With a collaborative approach, rather than a competitive one, CIPHS is working to unite the blockchain industry, empower business leaders and entrepreneurs, and eliminate the need for centralized third parties in financial transactions.</p>
+        <p id="intro" translate>A digital currency to use throughout the universe.</p>
+        <p class="subIntro" translate>Site: <a href="http://ciphs.coin/" target="_blank">ciphs.coin</a></p>
+        <p class="subIntro" translate>Wallets: <a href="http://ciphs.coin/" target="_blank">ciphs.coin
+        <p class="subIntro" translate>Pool: <a href="http://ciphs.coin/" target="_blank">ciphs.coin</a></p>
+        <p class="subIntro" translate>Discord: <a href="https://discord.gg/rXzqmxNZ/" target="_blank">ciphscoin/discord</a></p>
+        <p class="subIntro" translate>Guides: <a href="http://github.com/ciphscoin/" target="_blank">ciphscoin/guides</a></p>
 
         <p data-ng-if='currency.testnet'><strong>This explorer is currently showing the live Ciphscoin Network!</strong></p>
         <div id="powered" class="row">
+          <a class="twitter-timeline" href="https://twitter.com/Ciphscoin">Tweets by Ciphscoin</a></p>
           <div class="powered-text">
-            <small class="text-muted" translate>Powered by</small>
+            <small class="text-muted" translate>Powered by Ciph.org</small>
           </div>
           <!-- <a href="https://supernet.org/" target="_blank" class="supernet" title="SuperNET"></a> -->
           <a href="https://ciphs.org" target="_blank" class="komodoplatform" title="CIPHS.ORG"></a>
