--- a/public/views/index.html
+++ b/public/views/index.html
@@ -72,7 +72,7 @@
         <div id="powered" class="row">
           <a class="twitter-timeline" href="https://twitter.com/Ciphscoin">Tweets by Ciphscoin</a></p>
           <div class="powered-text">
-            <small class="text-muted" translate>Powered by Ciph.org</small>
+            <small class="text-muted" translate>Powered by Ciphs.org</small>
           </div>
           <!-- <a href="https://supernet.org/" target="_blank" class="supernet" title="SuperNET"></a> -->
           <a href="https://ciphs.org" target="_blank" class="komodoplatform" title="CIPHS.ORG"></a>
