--- a/public/views/index.html
+++ b/public/views/index.html
@@ -70,7 +70,7 @@
 
         <p data-ng-if='currency.testnet'><strong>This explorer is currently showing the live Ciphscoin Network!</strong></p>
         <div id="powered" class="row">
-          <a class="twitter-timeline" href="https://twitter.com/Ciphscoin">Tweets by Ciphscoin</a></p>
+          <a class="twitter-timeline" href="https://twitter.com/ciphscoin">Tweets by Ciphscoin</a></p>
           <div class="powered-text">
             <small class="text-muted" translate>Powered by Ciphs.org</small>
           </div>
