--- a/public/views/index.html
+++ b/public/views/index.html
@@ -61,7 +61,7 @@
 
       <div class="col-xs-12 col-md-4 col-gray">
         <h2 translate>What is Ciphscoin?</h2>
-        <p id="intro" translate>A digital currency to use throughout the universe.</p>
+        <p id="intro" translate>A fast and decentralized blockchain for everryone.</p>
         <p class="subIntro" translate>Site: <a href="http://ciphs.coin/" target="_blank">ciphs.coin</a></p>
         <p class="subIntro" translate>Wallets: <a href="http://ciphs.coin/" target="_blank">ciphs.coin
         <p class="subIntro" translate>Pool: <a href="http://ciphs.coin/" target="_blank">ciphs.coin</a></p>
