--- a/public/views/includes/currency.html
+++ b/public/views/includes/currency.html
@@ -1,18 +1,13 @@
 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-  {{currency.symbol}} <span class="caret"></span>
+  CIPHS <span class="caret"></span>
 </a>
 <ul class="dropdown-menu">
   <li>
   <a data-ng-click="setCurrency('USD')" data-ng-class="{active: currency.symbol == 'USD'}">USD</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency(currency.netSymbol)" data-ng-class="{active: currency.symbol == currency.netSymbol}">CIPHS</a>
+  <a data-ng-click="setCurrency('CIPHS')" data-ng-class="{active: currency.symbol == 'CIPHS'}">CIPHS</a>
   </li>
   <li>
-  <a data-ng-click="setCurrency('m'+currency.netSymbol)" data-ng-class="{active: currency.symbol == ('m'+currency.netSymbol)}">mCIPHS</a>
-  </li> 
-  <li>
-  <a data-ng-click="setCurrency('bits')" data-ng-class="{active: currency.symbol == 'bits'}">bits</a>
-  </li>
 </ul>
 
